Auto stash before merge of "master" and "origin/master"
thing

--- a/lstm4.ipynb
+++ b/lstm4.ipynb
@@ -495,7 +495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -555,7 +555,7 @@
     "            target = target.cuda()\n",
     "        \n",
     "        self.hidden = self.init_hidden(len(item.img_features))\n",
-    "        return Variable(sequences.permute(1,0,2)), Variable(target)\n",
+    "        return Variable(sequences.permute(1,0,2).contiguous()), Variable(target)\n",
     "    \n",
     "    def prepareBatch (self, batch):\n",
     "        inputs = []\n",
@@ -565,7 +565,7 @@
     "            targets.append(target)\n",
     "        inputs = torch.cat(inputs)\n",
     "        targets = torch.cat(targets)\n",
-    "        return Variable(inputs), Variable(targets)\n",
+    "        return Variable(inputs, requires_grad=True), Variable(targets)\n",
     "        \n",
     "    def forward(self, inp, batch_size):\n",
     "#         print(inp.size())\n",
@@ -580,7 +580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -613,16 +613,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "2.302520122528076"
+       "2.302457122802734"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -669,7 +669,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -704,7 +704,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "metadata": {
     "scrolled": false
    },
@@ -714,26 +714,39 @@
      "output_type": "stream",
      "text": [
       "we have: 40000 dialogs, batch size of 1 with 1 as remainder to offset batches each epoch\n",
-      "Logging enabled in: test_top1_top2-t_size_40000-v_size_5000-emb_50-eps_100-dt_12-17-01-52-batch_1.txt\n",
-      "3s:\t epoch: 0\t batch:247 (0.6%) \t training error: 2.318105\t speed: 82.3 dialogs/s\n",
-      "6s:\t epoch: 0\t batch:499 (1.2%) \t training error: 2.311368\t speed: 83.0 dialogs/s\n",
-      "9s:\t epoch: 0\t batch:749 (1.9%) \t training error: 2.308443\t speed: 83.1 dialogs/s\n",
-      "12s:\t epoch: 0\t batch:999 (2.5%) \t training error: 2.307367\t speed: 83.1 dialogs/s\n",
-      "15s:\t epoch: 0\t batch:1250 (3.1%) \t training error: 2.306336\t speed: 83.2 dialogs/s\n"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-38-e26b5a02677d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     53\u001b[0m         \u001b[0mitem\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdialog_data\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     54\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 55\u001b[0;31m         \u001b[0minputs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtarget\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mprepare\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mitem\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     56\u001b[0m         \u001b[0mpred\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmodel\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minputs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mitem\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mimg_features\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     57\u001b[0m         \u001b[0mpred\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpred\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0munsqueeze\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-34-340ebb748326>\u001b[0m in \u001b[0;36mprepare\u001b[0;34m(self, item)\u001b[0m\n\u001b[1;32m     38\u001b[0m         \u001b[0mlist_of_string_vectors\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mextend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mitem\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mqa_vectors\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     39\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcuda\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mis_available\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 40\u001b[0;31m             \u001b[0mlist_of_string_vectors\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mvec\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcuda\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mvec\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mlist_of_string_vectors\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     41\u001b[0m         \u001b[0mtext_features\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtext_module\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mVariable\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mvec\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdata\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mvec\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mlist_of_string_vectors\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     42\u001b[0m         \u001b[0mtext_features\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msqueeze\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstack\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtext_features\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-34-340ebb748326>\u001b[0m in \u001b[0;36m<listcomp>\u001b[0;34m(.0)\u001b[0m\n\u001b[1;32m     38\u001b[0m         \u001b[0mlist_of_string_vectors\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mextend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mitem\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mqa_vectors\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     39\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcuda\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mis_available\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 40\u001b[0;31m             \u001b[0mlist_of_string_vectors\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mvec\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcuda\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mvec\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mlist_of_string_vectors\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     41\u001b[0m         \u001b[0mtext_features\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtext_module\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mVariable\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mvec\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdata\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mvec\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mlist_of_string_vectors\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     42\u001b[0m         \u001b[0mtext_features\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msqueeze\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstack\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtext_features\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/miniconda3/lib/python3.6/site-packages/torch/_utils.py\u001b[0m in \u001b[0;36m_cuda\u001b[0;34m(self, device, async)\u001b[0m\n\u001b[1;32m     64\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     65\u001b[0m             \u001b[0mnew_type\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mgetattr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcuda\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__class__\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__name__\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 66\u001b[0;31m             \u001b[0;32mreturn\u001b[0m \u001b[0mnew_type\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msize\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcopy_\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0masync\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     67\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     68\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+      "Logging enabled in: test_top1_top2-t_size_40000-v_size_5000-emb_50-eps_100-dt_12-17-02-09-batch_1.txt\n",
+      "3s:\t epoch: 0\t batch:231 (0.6%) \t training error: 2.312495\t speed: 76.9 dialogs/s\n",
+      "6s:\t epoch: 0\t batch:465 (1.2%) \t training error: 2.308129\t speed: 77.4 dialogs/s\n",
+      "9s:\t epoch: 0\t batch:710 (1.8%) \t training error: 2.306150\t speed: 78.8 dialogs/s\n",
+      "12s:\t epoch: 0\t batch:931 (2.3%) \t training error: 2.305618\t speed: 77.5 dialogs/s\n",
+      "15s:\t epoch: 0\t batch:1157 (2.9%) \t training error: 2.305190\t speed: 77.0 dialogs/s\n",
+      "18s:\t epoch: 0\t batch:1410 (3.5%) \t training error: 2.304904\t speed: 78.2 dialogs/s\n",
+      "21s:\t epoch: 0\t batch:1656 (4.1%) \t training error: 2.304837\t speed: 78.7 dialogs/s\n",
+      "24s:\t epoch: 0\t batch:1905 (4.8%) \t training error: 2.304690\t speed: 79.3 dialogs/s\n",
+      "27s:\t epoch: 0\t batch:2156 (5.4%) \t training error: 2.304499\t speed: 79.7 dialogs/s\n",
+      "30s:\t epoch: 0\t batch:2399 (6.0%) \t training error: 2.304450\t speed: 79.8 dialogs/s\n",
+      "33s:\t epoch: 0\t batch:2631 (6.6%) \t training error: 2.304462\t speed: 79.6 dialogs/s\n",
+      "36s:\t epoch: 0\t batch:2868 (7.2%) \t training error: 2.304329\t speed: 79.6 dialogs/s\n",
+      "39s:\t epoch: 0\t batch:3117 (7.8%) \t training error: 2.304367\t speed: 79.8 dialogs/s\n",
+      "42s:\t epoch: 0\t batch:3363 (8.4%) \t training error: 2.304238\t speed: 80.0 dialogs/s\n",
+      "45s:\t epoch: 0\t batch:3610 (9.0%) \t training error: 2.304252\t speed: 80.1 dialogs/s\n",
+      "48s:\t epoch: 0\t batch:3839 (9.6%) \t training error: 2.304223\t speed: 79.9 dialogs/s\n",
+      "51s:\t epoch: 0\t batch:4092 (10.2%) \t training error: 2.304209\t speed: 80.1 dialogs/s\n",
+      "54s:\t epoch: 0\t batch:4338 (10.8%) \t training error: 2.304139\t speed: 80.2 dialogs/s\n",
+      "57s:\t epoch: 0\t batch:4588 (11.5%) \t training error: 2.304139\t speed: 80.4 dialogs/s\n",
+      "60s:\t epoch: 0\t batch:4839 (12.1%) \t training error: 2.304072\t speed: 80.5 dialogs/s\n",
+      "63s:\t epoch: 0\t batch:5090 (12.7%) \t training error: 2.304018\t speed: 80.7 dialogs/s\n",
+      "66s:\t epoch: 0\t batch:5342 (13.4%) \t training error: 2.304000\t speed: 80.8 dialogs/s\n",
+      "69s:\t epoch: 0\t batch:5595 (14.0%) \t training error: 2.303982\t speed: 80.9 dialogs/s\n",
+      "72s:\t epoch: 0\t batch:5846 (14.6%) \t training error: 2.303929\t speed: 81.1 dialogs/s\n",
+      "75s:\t epoch: 0\t batch:6098 (15.2%) \t training error: 2.303914\t speed: 81.2 dialogs/s\n",
+      "78s:\t epoch: 0\t batch:6351 (15.9%) \t training error: 2.303752\t speed: 81.3 dialogs/s\n",
+      "81s:\t epoch: 0\t batch:6604 (16.5%) \t training error: 2.303820\t speed: 81.4 dialogs/s\n",
+      "84s:\t epoch: 0\t batch:6858 (17.1%) \t training error: 2.303788\t speed: 81.5 dialogs/s\n",
+      "87s:\t epoch: 0\t batch:7112 (17.8%) \t training error: 2.303776\t speed: 81.6 dialogs/s\n",
+      "90s:\t epoch: 0\t batch:7366 (18.4%) \t training error: 2.303667\t speed: 81.7 dialogs/s\n",
+      "93s:\t epoch: 0\t batch:7619 (19.0%) \t training error: 2.303680\t speed: 81.8 dialogs/s\n",
+      "96s:\t epoch: 0\t batch:7870 (19.7%) \t training error: 2.303717\t speed: 81.8 dialogs/s\n"
      ]
     }
    ],
@@ -794,8 +807,7 @@
     "        \n",
     "        inputs, target = model.prepare(item)\n",
     "        pred = model(inputs, len(item.img_features))\n",
-    "        pred = pred[:,-1].unsqueeze(0)\n",
-    "        loss = criterion(pred, target)\n",
+    "        loss = criterion(pred[:,-1].unsqueeze(0), target)\n",
     "        \n",
     "        training_errors.append(loss.data[0])\n",
     "        total_loss += loss.data[0]\n",
